lab2/part1/batch/jobs/A0285757B/logs.txt
Processing student job in jobs/A0285757B/
utils.c:4:5: error: conflicting types for 'sum'
int sum(int sum_array[], int n) {
    ^
./utils.h:2:8: note: previous declaration is here
double sum(int [], int);
       ^
1 error generated.
Compilation failed for jobs/A0285757B/
